LeaveService changes